<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header_mqtt">

        <EditTextPreference
            app:key="mqtt_server"
            app:title="@string/mqtt_server"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            app:key="mqtt_port"
            app:title="@string/mqtt_server"
            android:defaultValue="1883"
            app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
            android:key="mqtt_username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/mqtt_username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="mqtt_password"
            android:title="@string/mqtt_password"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="mqtt_use_tls"
            android:title="@string/mqtt_use_tls" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_header_app">

        <ListPreference
            app:defaultValue="@string/settings_app_theme_default_value"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="@string/settings_app_theme"
            app:title="@string/settings_app_theme" />
        <Preference
            app:title="Icons"
            app:summary="made by Roundicons">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>