<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waypoint_list_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/waypoint_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/waypoint_list_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:src="@drawable/ic_outline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="15dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waypoint_list_title" />

    <ImageView
        android:id="@+id/button_add_rth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/ic_outline_home_24"
        android:tooltipText="@string/waypoint_list_button_add_rth"
        app:layout_constraintBottom_toBottomOf="@+id/waypoint_list_title"
        app:layout_constraintStart_toEndOf="@+id/waypoint_list_title"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnSurface"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/button_add_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/ic_outline_double_arrow_24"
        android:tooltipText="@string/waypoint_list_button_add_jump"
        app:layout_constraintBottom_toBottomOf="@+id/waypoint_list_title"
        app:layout_constraintStart_toEndOf="@+id/button_add_rth"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnSurface"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/button_clear_waypoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/waypoint_list_button_clear"
        android:padding="10dp"
        android:src="@drawable/ic_outline_clear_all_24"
        android:tooltipText="@string/waypoint_list_button_clear"
        app:layout_constraintBottom_toBottomOf="@+id/waypoint_list_title"
        app:layout_constraintEnd_toStartOf="@+id/close_button"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnSurface"
        tools:targetApi="o" />

    <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
        android:id="@+id/waypoint_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:item_layout="@layout/waypoint_list_item"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:listitem="@layout/waypoint_list_item" />

    <!--    <TextView-->
    <!--        android:id="@+id/no_waypoints"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginVertical="8dp"-->
    <!--        android:text="@string/waypoint_list_empty"-->
    <!--        android:textAlignment="center"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/divider" />-->

</androidx.constraintlayout.widget.ConstraintLayout>